--- a/Project_Hospital/webapp/templates/main/index.html
+++ b/Project_Hospital/webapp/templates/main/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <title>Hello</title>
+
+        {% load static %}
+
+        <link rel="stylesheet" href="{% static 'main/style.css' %}">
     </head>
     <body>
         <h1>Hello, World!</h1>
