--- a/Project_Hospital/webapp/templates/main/index.html
+++ b/Project_Hospital/webapp/templates/main/index.html
@@ -31,7 +31,7 @@
     - custom css link
   -->
   <link rel="stylesheet" href="style.css">
-
+  {% load static %}  
   <link rel="stylesheet" href="{% static 'main/style.css' %}">
 
 
