Sun, Jun 23, 2024, 4:26 PM +05:30

--- a/Project_Hospital/webapp/templates/main/index.html
+++ b/Project_Hospital/webapp/templates/main/index.html
@@ -37,11 +37,15 @@
 
   <!--
     - preload images
-  -->
+
 
   <link rel="preload" as="image" href="./assets/images/hero-banner.png">
   <link rel="preload" as="image" href="./assets/images/hero-bg.png">
+-->
 
+{% load static %}
+<link rel="preload" as="image" href="{% static 'main/images/hero-banner.png' %}">
+<link rel="preload" as="image" href="{% static 'main/images/hero-bg.png' %}">
 </head>
 
 <body id="top">
