--- a/Project_Hospital/webapp/templates/main/index.html
+++ b/Project_Hospital/webapp/templates/main/index.html
@@ -69,9 +69,17 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">
+   <!--<a href="#" class="logo">
         <img src="logo.svg" width="136" height="46" alt=" home">
       </a>
+    -->
+    {% load static %}
+    <a href="#" class="logo">
+        <img src="{% static 'main/logo.svg' %}" width="136" height="46" alt=" home">
+    </a>
+
+
+
 
       <nav class="navbar" data-navbar>
 
