Sun, Jun 23, 2024, 6:46 PM +05:30

--- a/Project_Hospital/webapp/templates/main/index.html
+++ b/Project_Hospital/webapp/templates/main/index.html
@@ -75,7 +75,7 @@
     -->
     {% load static %}
     <a href="#" class="logo">
-        <img src="{% static 'main/logo.svg' %}" width="136" height="46" alt=" home">
+        <img src="{% static 'main/images/logo.svg' %}" width="136" height="46" alt=" home">
     </a>
 
 
