Sun, Jun 23, 2024, 6:52 PM +05:30

--- a/Project_Hospital/webapp/templates/main/index.html
+++ b/Project_Hospital/webapp/templates/main/index.html
@@ -13,7 +13,7 @@
 
 
   <!--
-    - favicon
+    - favicon  here need to do some changes 
   -->
   <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 
