--- a/Project_Hospital/webapp/templates/main/index.html
+++ b/Project_Hospital/webapp/templates/main/index.html
@@ -67,7 +67,7 @@
     <div class="container">
 
    <!--<a href="#" class="logo">
-      
+
     -->
     {% load static %}
     <a href="#" class="logo">
@@ -212,7 +212,8 @@
           </div>
 
           <figure class="hero-banner" data-reveal="right">
-            <img src="hero-banner.png" width="590" height="517" loading="eager" alt="hero banner"
+
+            <img src="{% static 'main/image/hero-banner.png%}" width="590" height="517" loading="eager" alt="hero banner"
               class="w-100">
           </figure>
 
