--- a/Project_Hospital/webapp/templates/main/index.html
+++ b/Project_Hospital/webapp/templates/main/index.html
@@ -259,7 +259,7 @@
               <div class="service-card" data-reveal="bottom">
 
                 <div class="card-icon">
-                  <img src="icon-2.png" width="71" height="71" loading="lazy" alt="icon">
+                  <img src="{% static 'main/images/icon-2.png'%}" width="71" height="71" loading="lazy" alt="icon">
                 </div>
 
                 <h3 class="headline-sm card-title">
