Sun, Jun 23, 2024, 7:12 PM +05:30

--- a/Project_Hospital/webapp/templates/main/index.html
+++ b/Project_Hospital/webapp/templates/main/index.html
@@ -237,7 +237,7 @@
               <div class="service-card" data-reveal="bottom">
 
                 <div class="card-icon">
-                  <img src="icon-1.png" width="71" height="71" loading="lazy" alt="icon">
+                  <img src="{% static 'main/images/icon-1.png'%}" width="71" height="71" loading="lazy" alt="icon">
                 </div>
 
                 <h3 class="headline-sm card-title">
@@ -281,7 +281,7 @@
               <div class="service-card" data-reveal="bottom">
 
                 <div class="card-icon">
-                  <img src="icon-3.png" width="71" height="71" loading="lazy" alt="icon">
+                  <img src="{% static 'main/images/icon-3.png'%}" width="71" height="71" loading="lazy" alt="icon">
                 </div>
 
                 <h3 class="headline-sm card-title">
@@ -303,7 +303,7 @@
               <div class="service-card" data-reveal="bottom">
 
                 <div class="card-icon">
-                  <img src="icon-4.png" width="71" height="71" loading="lazy" alt="icon">
+                  <img src="{% static 'main/images/icon-4.png'%}" width="71" height="71" loading="lazy" alt="icon">
                 </div>
 
                 <h3 class="headline-sm card-title">
@@ -404,7 +404,7 @@
           </div>
 
           <figure class="about-banner" data-reveal="right">
-            <img src="about-banner.png" width="554" height="678" loading="lazy" alt="about banner"
+            <img src="{% static 'main/images/about-banner.png'%}" width="554" height="678" loading="lazy" alt="about banner"
               class="w-100">
           </figure>
 
@@ -434,7 +434,7 @@
               <div class="listing-card" data-reveal="bottom">
 
                 <div class="card-icon">
-                  <img src="icon-1.png" width="71" height="71" loading="lazy" alt="icon">
+                  <img src="{% static 'main/images/icon-1.png'%}" width="71" height="71" loading="lazy" alt="icon">
                 </div>
 
                 <div>
@@ -450,7 +450,7 @@
               <div class="listing-card" data-reveal="bottom">
 
                 <div class="card-icon">
-                  <img src="icon-2.png" width="71" height="71" loading="lazy" alt="icon">
+                    <img src="{% static 'main/images/icon-2.png'%}" width="71" height="71" loading="lazy" alt="icon">
                 </div>
 
                 <div>
@@ -466,7 +466,7 @@
               <div class="listing-card" data-reveal="bottom">
 
                 <div class="card-icon">
-                  <img src="icon-4.png" width="71" height="71" loading="lazy" alt="icon">
+                  <img src="{% static 'main/images/icon-4.png'%}" width="71" height="71" loading="lazy" alt="icon">
                 </div>
 
                 <div>
@@ -482,7 +482,7 @@
               <div class="listing-card" data-reveal="bottom">
 
                 <div class="card-icon">
-                  <img src="icon-5.png" width="71" height="71" loading="lazy" alt="icon">
+                  <img src="{% static 'main/images/icon-5.png'%}" width="71" height="71" loading="lazy" alt="icon">
                 </div>
 
                 <div>
@@ -498,7 +498,7 @@
               <div class="listing-card" data-reveal="bottom">
 
                 <div class="card-icon">
-                  <img src="icon-6.png" width="71" height="71" loading="lazy" alt="icon">
+                  <img src="{% static 'main/images/icon-6.png'%}" width="71" height="71" loading="lazy" alt="icon">
                 </div>
 
                 <div>
@@ -514,7 +514,7 @@
               <div class="listing-card" data-reveal="bottom">
 
                 <div class="card-icon">
-                  <img src="icon-7.png" width="71" height="71" loading="lazy" alt="icon">
+                  <img src="{% static 'main/images/icon-7.png'%}" width="71" height="71" loading="lazy" alt="icon">
                 </div>
 
                 <div>
