--- a/Project_Hospital/webapp/templates/main/index.html
+++ b/Project_Hospital/webapp/templates/main/index.html
@@ -673,7 +673,7 @@
         <div class="footer-brand" data-reveal="bottom">
 
           <a href="#" class="logo">
-            <img src="logo.svg" width="136" height="46" loading="lazy" alt="Doclab home">
+            <img src="{% static 'main/images/logo.svg'%}" width="136" height="46" loading="lazy" alt="Doclab home">
           </a>
 
           <ul class="contact-list has-after">
