Sun, Jun 23, 2024, 7:53 PM +05:30

--- a/Project_Hospital/webapp/templates/main/index.html
+++ b/Project_Hospital/webapp/templates/main/index.html
@@ -13,7 +13,8 @@
 
 
   <!--
-    - favicon  here need to do some changes
+    - favicon  here need to do some changes dont think it link with django
+
   -->
   <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 
@@ -56,9 +57,6 @@
   </div>
 
 
-
-
-
   <!--
     - #HEADER
   -->
@@ -73,9 +71,6 @@
     <a href="#" class="logo">
         <img src="{% static 'main/images/logo.svg' %}" width="136" height="46" alt=" home">
     </a>
-
-
-
 
       <nav class="navbar" data-navbar>
 
