Sun, Jun 23, 2024, 7:54 PM +05:30

--- a/Project_Hospital/webapp/templates/main/index.html
+++ b/Project_Hospital/webapp/templates/main/index.html
@@ -157,10 +157,6 @@
     </div>
   </header>
 
-
-
-
-
   <main>
     <article>
 
@@ -177,7 +173,7 @@
 
             <h1 class="headline-lg hero-title" data-reveal="left">
               Find Nearest <br>
-              Gov and private Hospital.
+               Hospital.
             </h1>
 
             <div class="hero-card" data-reveal="left">
@@ -214,9 +210,6 @@
 
         </div>
       </section>
-
-
-
 
 
       <!--
